Fixed double borders

--- a/core/app/assets/stylesheets/email/message.css.less
+++ b/core/app/assets/stylesheets/email/message.css.less
@@ -38,7 +38,6 @@
 .message-content {
   padding-top: 0;
   padding-bottom: 0;
-  border-bottom: @emailBaseBorderStyling;
   max-width: 700px;
 
   p {
